infrastructure/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dollor
  labels:
    app: dollor-backend
