infrastructure/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dollor-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: dollor-backend
